--- a/check_mk_postgres/README
+++ b/check_mk_postgres/README
@@ -19,5 +19,6 @@ Check_MK Plugin to check PostgreSQL Server.
     
     On your check Server:
     
-        install check_postgres-1.0.mkp on your check server 
+        install check_postgres-1.0.mkp on your check server
+        create a DB user root whith superuser grands
 
