--- a/check_krb5/README
+++ b/check_krb5/README
@@ -2,7 +2,7 @@ check the usability of a kerberos 5 KDC.
 
 check_mk check and WATO Rule for check_krb5 from http://exchange.nagios.org/directory/Plugins/Security/check_krb5/details
 
-The check was tested on the following Linux versions: Debian Squeeze
+The check was tested on the following Linux versions: Debian Squeeze, Wheezy
 
 Any feedback welcome, PM to karsten.schoeke[at]geobasis-bb[dot]de. 
 I'm also reading the german check_mk ML: checkmk-de@lists.mathias-kettner.de
