--- a/visibility_control/README
+++ b/visibility_control/README
@@ -1,6 +1,6 @@
 check_mk Multiside extension to manage the user visibility.
 
-This extension is a mutiside snapin, which ist installable via 'add snapin to the sidebar' button.
+This extension is a mutiside snapin, which is installable via 'add snapin to the sidebar' button.
 
 The snapin manage the visibility of Hosts/Services that you see only host and services that the user is a contact for yes/no.
 
